Image alignment-fixed, naming changed for skillnames, poke-battle-ui applied.

--- a/base.css
+++ b/base.css
@@ -77,10 +77,10 @@ html, body {
     grid-area: 3/3/6/5;
   }
   
-  img { 
-    height: 100%;
+  /* img { 
+    height: 150%;
     width: 100%;
-  }
+  } */
   
   .building {
     height: 100%;
@@ -170,6 +170,24 @@ html, body {
     display: none;
   }
   
+  .poke-box-about {
+    grid-area: 1/2/3/2;
+    background: rgba(24, 24, 24, 0.8);   
+    border: 4px solid #000000;             
+
+    box-shadow:
+      0 0 0 4px #ffffff,                  
+      0 0 0 8px #4a4a4a;                   
+
+    width: fit-content;
+    display: inline-block;
+
+    image-rendering: pixelated;      /*pixelated style*/ 
+    border-radius: 4px;
+
+    margin-top: 15px;
+  }
+
   .aboutTab {
     display: grid;
     grid-template: 1fr 1fr/1fr 1.5fr 1fr ;
@@ -191,11 +209,10 @@ html, body {
   }
 
   .aboutTab > p {
-    grid-area: 1/2/3/3;
     font-size: 14px;
-    line-height: 250%;
-    margin-top: 25px;
-    margin-right: 15px;
+    line-height: 50%;
+    /* margin-top: 25px; */
+    /* margin-right: 15px; */
   }
   
   #close {
@@ -240,10 +257,10 @@ html, body {
     text-align: center;
   }
   
-  .languages > img {
+  /* .languages > img {
     width: 100px;
     height: 120px;
-  }
+  } */
   
   .close {
     position: absolute;
@@ -268,70 +285,70 @@ html, body {
   }
   
   /* Name of all the skills */
-  .skillName1{
+  .skillName-python{
     font-family: "Press Start 2P";
     color: #ff2595;
     font-size: 15px;
     margin-left: 31px;
   }
-  .skillName2{
+  .skillName-pytorch{
     font-family: "Press Start 2P";
     color: #ff2595;
     font-size: 15px;
     margin-left:25px ;
   }   
-  .skillName3{
+  .skillName-tensorflow{
     font-family: "Press Start 2P";
     color: #ff2595;
     font-size: 15px;
   }   
-  .skillName4{
+  .skillName-opencv{
     font-family: "Press Start 2P";
     color: #ff2595;
     font-size: 15px;
-    margin-left:30px ;
+    margin-left:15px ;
   }   
-  .skillName5{
+  .skillName-html{
     font-family: "Press Start 2P";
     color: #ff2595;
     font-size: 15px;
-    margin-left:45px ;
+    margin-left:18px ;
   } 
-  .skillName6{
+  .skillName-css{
     font-family: "Press Start 2P";
     color: #ff2595;
     font-size: 15px;
-    margin-left:50px ;
+    margin-left:25px ;
   } 
-  .skillName7{
+  .skillName-js{
     font-family: "Press Start 2P";
     color: #ff2595;
     font-size: 15px;
-    margin-left:3px ;
+    
   } 
-  .skillName8{
-    font-family: "Press Start 2P";
-    color: #ff2595;
-    font-size: 15px;
-    margin-left:40px ;
-  } 
-  .skillName9{
+  .skillName-jquery{
     font-family: "Press Start 2P";
     color: #ff2595;
     font-size: 15px;
     margin-left:10px ;
   } 
-  .skillName10{
+  .skillName-bootstrap{
     font-family: "Press Start 2P";
     color: #ff2595;
     font-size: 15px;
-    margin-left:40px ;
+    margin-right:10px ;
   } 
-  .skillName11{
+  .skillName-ajax{
     font-family: "Press Start 2P";
     color: #ff2595;
     font-size: 15px;
-    margin-left:40px ;
+    margin-left:15px ;
+  } 
+  .skillName-react{
+    font-family: "Press Start 2P";
+    color: #ff2595;
+    font-size: 15px;
+    margin-left:12px ;
   } 
 
   /* Logo for all the skills */
@@ -346,48 +363,52 @@ html, body {
     align-items: center center;
   }
   .tensorflow{
-    height: 100px;
-    width: 150px;
+    height: 80px;
+    width: 100px;
     align-items: center center;
   }
   .opencv{
     height: 100px;
-    width: 150px;
+    width: 90px;
     align-items: center center;
+    margin-left: 20px;
   }
   .html{
     height: 100px;
-    width: 150px;
+    width: 90px;
     align-items: center center;
   }
   .css{
     height: 100px;
-    width: 150px;
+    width: 90px;
     align-items: center center;
   }
   .javascript{
     height: 100px;
-    width: 150px;
+    width: 90px;
     align-items: center center;
+    margin-left: 20px;
   }
   .jquery{
     height: 100px;
     width: 150px;
     align-items: center center;
+
   }
   .bootstrap{
     height: 100px;
-    width: 150px;
+    width: 90px;
     align-items: center center;
+    margin-left: 10px;
   }
   .ajax{
     height: 100px;
-    width: 150px;
+    width: 90px;
     align-items: center center;
   }
   .react{
     height: 100px;
-    width: 150px;
+    width: 90px;
     align-items: center center;
   }
   /*------------------------END OF SKILLS---------------------*/
@@ -532,28 +553,38 @@ html, body {
     width: 100%;
   }
   
-  .words {
-    grid-area: 2/1/3/4;
-    height: 100%;
-    width: 50%;
-    color: white;
-    font-size: 14px;
-    line-height: 130%;
-    text-align: center;
-    justify-self: center;
+  .poke-box {
+    grid-area: 2/2/2/2;
+    background: rgba(24, 24, 24, 0.8);   
+    border: 4px solid #000000;             
+
+    box-shadow:
+      0 0 0 4px #ffffff,                  
+      0 0 0 8px #4a4a4a;                   
+
+    width: fit-content;
+    display: inline-block;
+
+    image-rendering: pixelated;      /*pixelated style*/ 
+    border-radius: 4px;
   }
-  
+
+  .words { 
+    color: white; 
+    font-size: 14px; 
+    line-height: 250%; 
+  }
+
   .social {
     grid-area: 1/1/2/4;
     display: grid;
     grid-template: 100%/ 1fr 1fr 1fr 1fr 1fr;
-    height: 90%;
-    width: 85%;
+    height: 75%;
   }
   
   .social > div {
-    height: 60%;
-    width: 60%;
+    height: 50%;
+    width: 50%;
     justify-self: center;
   }
 
@@ -585,6 +616,8 @@ html, body {
     grid-area: 3/2/4/3;
     justify-self: center;
     color: pink;
+    height: 100px;
+    width: 100px;
   }
   
   .resume:hover {
@@ -592,7 +625,7 @@ html, body {
   }
   
   .resume > a > img {
-    height: 90px;
+    height: 80px;
     width: 60px;
     margin-left: 12px;
   }
